plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.8'
    id 'io.spring.dependency-management' version '1.1.6'
}

group = 'com.ra'
version = '0.0.1-SNAPSHOT'

sourceSets {
    main {
        java { srcDirs = ['src/main/java'] }
        resources { srcDirs = ['src/main/resources'] }
    }
    test {
        java { srcDirs = ['src/test/java'] }
        resources { srcDirs = ['src/test/resources'] }
    }
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // Spring Boot starters
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'

    // Reactive WebClient + Reactor Netty
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'io.projectreactor.netty:reactor-netty'

    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'org.springframework.boot:spring-boot-starter-cache' // cache nếu muốn
    implementation 'org.apache.commons:commons-pool2' // connection pool

    // Redis
    implementation 'io.lettuce:lettuce-core'

    // Google OAuth dependencies removed per request (migrate to Cloudinary uploads)

    // Database & Flyway
    implementation 'org.flywaydb:flyway-core:9.22.3'
    implementation 'com.mysql:mysql-connector-j'

    // ModelMapper
    implementation 'org.modelmapper:modelmapper:3.2.0'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'

    // Devtools
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    // Test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // JWT
    implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.2'
    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.2'
    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.2'

    // Swagger/OpenAPI (target Spring Boot 3.5.x / Spring 6.2.x)
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'

    // Cloudinary Java SDK
    implementation 'com.cloudinary:cloudinary-http44:1.35.0'
    implementation 'com.cloudinary:cloudinary-core:1.35.0'
}

tasks.named('test') {
    useJUnitPlatform()
}

// Hiển thị tối đa cảnh báo khi biên dịch
tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += [
            '-Xlint:all',
            '-Xlint:-processing' // tắt cảnh báo annotation processing Lombok
    ]
}
